--- a/src/index.css
+++ b/src/index.css
@@ -49,13 +49,13 @@
 }
 
 .music {
-  font-family: 'Guido HU';
+  font-family: 'Guido HU', serif;
   font-size: 40px;
   white-space: pre;
 }
 
 .musictext {
-  font-family: "Book Antiqua";
+  font-family: "Book Antiqua", serif;
   font-size: 20px;
   white-space: pre;
   display: inline-block;
@@ -74,7 +74,7 @@
 }
 
 .BNS-textus {
-  font-family: "Book Antiqua";
+  font-family: "Book Antiqua", serif;
   font-size: 20px;
 }
 
@@ -91,7 +91,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #f1f1f1;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
